# Agent_Dashboard

./: .gitignore  Jarvis_Mission_Control_PRD.md  README.md  app.js  package-lock.json  package.json
backend/: README.md  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py  security.py
backend/sql/: schema.sql
frontend/: index.css  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  data.ts  index.css  react-overrides.css  types.ts
frontend/src/components/: AgentDetail.tsx  Layout.tsx  ProtectedRoute.tsx  PublicLayout.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  InvalidationContext.tsx
frontend/src/data/: mockData.ts
frontend/src/legacy/: legacy.css
frontend/src/lib/: api.ts
frontend/src/pages/: AboutPage.tsx  AgentDetail.tsx  Agents.tsx  AuthPage.tsx  ContactPage.tsx  Dashboard.tsx  DocsPage.tsx  Inbox.tsx  LandingPage.tsx  PricingPage.tsx  Spend.tsx
sdk/js/: package.json  tsconfig.json
sdk/mcp/: pyproject.toml
sdk/mcp/jarvis_mc_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sdk/mcp/jarvis_mcp/: server.py
sdk/python/: pyproject.toml
sdk/python/jarvis_mc/: __init__.py  client.py
src/: App.tsx  data.ts  index.css  main.tsx  react-overrides.css  types.ts
src/components/: Layout.tsx  Sidebar.tsx
src/data/: mockData.ts
src/legacy/: LegacyMissionControl.tsx
src/pages/: AgentDetail.tsx  Agents.tsx  Dashboard.tsx  Inbox.tsx  Spend.tsx
src/views/: ApiSpend.tsx  Dashboard.tsx  FixUI.tsx  IngestApi.tsx  Momentum.tsx  SleepMode.tsx
(+27 files in other folders)
