[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis-mc-mcp"
version = "0.1.0"
description = "Jarvis Mission Control MCP server — connect any AI agent to your dashboard"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
jarvis-mcp = "jarvis_mcp.server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_mcp*"]
