[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis-mc"
version = "0.1.0"
description = "Python SDK for Jarvis Mission Control — connect any agent to your dashboard in 3 lines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_mc*"]
